<resources>
    <string name="app_name">Eruplan</string>
    <string name="generic_error">Errore: %1$s</string>
    <string name="unauthenticated_user_error">Utente non autenticato.</string>
    <string name="label_nome">Nome: %1$s</string>
    <string name="label_cognome">Cognome: %1$s</string>
    <string name="label_cf">CF: %1$s</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_cognome">Cognome</string>
    <string name="hint_codice_fiscale">Codice Fiscale</string>
    <string name="hint_data_nascita">Data di Nascita (gg/mm/aaaa)</string>
    <string name="label_sesso">Sesso</string>
    <string name="radio_maschio">Maschio</string>
    <string name="radio_femmina">Femmina</string>
    <string name="login_error">Errore di login: %1$s</string>
    <string name="empty_cf_error">Il codice fiscale non può essere vuoto</string>
    <string name="empty_password_error">La password non può essere vuota</string>
    <string name="empty_field_error">Questo campo non può essere vuoto</string>
    <string name="invalid_cf_length_error">Il codice fiscale deve essere di 16 caratteri</string>
    <string name="password_mismatch_error">Le password non corrispondono</string>
    <string name="gender_not_selected_error">Seleziona il sesso</string>
    <string name="signup_error">Errore di registrazione: %1$s</string>
    <string name="signup_success">Registrazione avvenuta con successo. Effettua il login.</string>
    <string name="validation_cf_mandatory">Il codice fiscale è obbligatorio.</string>
    <string name="validation_cf_format">Formato codice fiscale non valido.</string>
    <string name="validation_password_mandatory">La password è obbligatoria.</string>
    <string name="validation_password_format">La password deve contenere almeno 8 caratteri, di cui una lettera maiuscola, una minuscola e un numero.</string>
    <string name="validation_name_mandatory">Il nome è obbligatorio.</string>
    <string name="validation_name_format">Formato nome non valido.</string>
    <string name="validation_lastname_mandatory">Il cognome è obbligatorio.</string>
    <string name="validation_lastname_format">Formato cognome non valido.</string>
    <string name="validation_birthdate_mandatory">La data di nascita è obbligatoria.</string>
    <string name="validation_date_format">Formato data non valido. Usa dd-MM-yyyy.</string>
    <string name="validation_birthdate_past">Data di nascita non valida (deve essere nel passato).</string>
    <string name="validation_gender_mandatory">È obbligatorio specificare il sesso.</string>
    <string name="repo_internal_request_error">Errore interno nella creazione della richiesta.</string>
    <string name="repo_login_success">Login effettuato con successo.</string>
    <string name="repo_logout_success">Logout effettuato con successo.</string>
    <string name="repo_signup_request_error">Errore interno nella creazione della richiesta di registrazione.</string>
    <string name="repo_signup_success_default">Registrazione avvenuta con successo.</string>
    <string name="repo_invalid_server_response">Risposta del server non valida.</string>
    <string name="repo_server_communication_error">Errore di comunicazione con il server.</string>
    <string name="repo_server_communication_error_with_code">Errore di comunicazione con il server. (Codice: %1$d)</string>
    <string name="checkbox_assistenza">Necessita di assistenza</string>
    <string name="checkbox_minorenne">Minorenne</string>
    <string name="button_aggiungi_membro">Aggiungi Membro</string>
    <string name="welcome_message">Benvenuto in Eruplan</string>
    <string name="create_family_button">Crea un nuovo nucleo familiare</string>
    <string name="view_invitations_button">Vedi inviti ricevuti</string>
    <string name="no_members_found">Nessun membro trovato nel nucleo.</string>
    <string name="members_loading_error">Errore caricamento membri: %1$s</string>
    <string name="member_remove_error">Errore eliminazione: %1$s</string>
    <string name="invitation_sent_success">Invito inviato con successo!</string>
    <string name="address_format">%1$s, %2$s</string>
    <string name="municipality_format">%1$s (%2$s)</string>
    <string name="validation_invalid_name">Il nome non è valido.</string>
    <string name="validation_invalid_lastname">Il cognome non è valido.</string>
    <string name="validation_invalid_cf_format">Il codice fiscale deve essere di 16 caratteri.</string>
    <string name="validation_invalid_gender">Il sesso non è valido.</string>
    <string name="validation_invalid_birthdate">La data di nascita non è valida.</string>
    <string name="validation_invalid_birthdate_format">La data di nascita non è valida (formato richiesto: dd-mm-aaaa).</string>
    <string name="validation_invalid_address">Via/Piazza non valido.</string>
    <string name="validation_invalid_municipality">Comune non valido.</string>
    <string name="validation_invalid_region">Regione non valida.</string>
    <string name="validation_invalid_country">Paese non valido.</string>
    <string name="validation_invalid_house_number">Numero civico non valido.</string>
    <string name="validation_invalid_zip">CAP non valido. Deve essere di 5 cifre.</string>
    <string name="validation_invalid_vehicle_seats">Il numero di posti del veicolo deve essere compreso tra 2 e 9.</string>
    <string name="validation_invalid_province">Provincia non valida.</string>
    <string name="validation_cf_not_valid_for_invite">Codice fiscale non valido per l\'invio.</string>
    <string name="validation_invalid_request_id">ID richiesta non valido.</string>
    <string name="repo_parsing_error">Errore nel parsing della risposta del server.</string>
    <string name="repo_connection_error">Errore di connessione al server: %1$s</string>
    <string name="repo_delete_success_default">Appoggio eliminato con successo.</string>
    <string name="repo_remove_member_success_default">Membro rimosso con successo.</string>
    <string name="repo_generic_operation_completed">Operazione completata.</string>
    <string name="repo_create_nucleus_success_default">Nucleo creato con successo.</string>
    <string name="repo_create_support_success_default">Appoggio creato con successo.</string>
    <string name="repo_leave_nucleus_success_default">Operazione completata con successo.</string>
    <string name="repo_leave_nucleus_connection_error">Errore di connessione. Impossibile abbandonare il nucleo. %1$s</string>
    <string name="repo_user_not_found">Nessun utente trovato.</string>
    <string name="repo_user_search_connection_error">Errore di connessione o utente non trovato.</string>
    <string name="repo_invite_error">Impossibile inviare l\'invito: %1$s</string>
    <string name="repo_accept_request_error">Errore durante l\'accettazione: %1$s</string>
    <string name="hint_via_piazza">Via o Piazza</string>
    <string name="hint_comune">Comune</string>
    <string name="hint_regione">Regione</string>
    <string name="hint_paese">Paese</string>
    <string name="hint_civico">Civico</string>
    <string name="hint_cap">CAP</string>
    <string name="checkbox_has_veicolo">Possiedi un veicolo?</string>
    <string name="hint_posti_veicolo">Numero posti veicolo</string>
    <string name="button_crea_nucleo">Crea Nucleo</string>
    <string name="error_empty_vehicle_seats">Per favore, inserisci il numero di posti.</string>
    <string name="error_invalid_vehicle_seats">Il numero di posti non è valido.</string>
    <string name="fcm_subscription_success">Iscrizione al Topic \'%1$s\' riuscita.</string>
    <string name="fcm_subscription_error">ERRORE: Iscrizione al Topic fallita.</string>
    <string name="no_nucleus_found">Nessun nucleo trovato.</string>
</resources>